[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Guardian-QC"
version = "0.0.1"
license = { text = "MIT" } 
authors = { name = "Rebecca Sizer", email = "rebecca.sizer@postgrad.manchester.ac.uk"},

description = "An AI tool for identifying QC outliers in NGS data"
readme = "README.md"
requires-python = "==3.12.*"
keywords = ["QualityContol", "NextGenerationSequencing", "ArtificialInteligence", "Genomics"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended audience :: Clinical Healthcare Professionals",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License"
]

dependencies = [

]

[project.optional-dependencies]
test = ["pytest==8.4.2"]

[project.urls]
Homepage = "https://github.com/RebeccaSizer/guardian-qc
Repository = "https://github.com/RebeccaSizer/guardian-qc"
Issues = "https://github.com/RebeccaSizer/guardian-qc/issues"
Actions = "https://github.com/RebeccaSizer/guardian-qc/actions"

[tool.setuptools.packages.find]
include = ["guardian-qc*"]
exclude = ["tmp*", "assets*", "logging*"]

[tool.coverage.run]
omit = ["*/__init__.py"]

[tool.coverage.report]
omit = ["*/__init__.py"]